@@ -1,3 +1,8 @@
+2005-11-16  Andrew Stubbs  <andrew.stubbs@st.com>
+
+	* gdb.texinfo (User-defined commands): Add $argc. Add missing 'end'.
+	Change @var{$arg0 to @code{$arg0.
+
 2005-11-14  Andrew Stubbs  <andrew.stubbs@st.com>
 
 	* gdb.texinfo (Choosing files): Add --eval-command.
